# rigged-royale-matchup-ml

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLOUD_RUN.md  Dockerfile  README.md  RUNPOD_TRAINING.md  docker-compose.yml  example-matchup.json  pyproject.toml  seeds.txt
.playwright-mcp/: page-2026-06-22T10-00-43-666Z.yml  page-2026-06-22T10-01-25-258Z.yml  page-2026-06-22T10-01-43-616Z.yml  page-2026-06-22T10-02-07-706Z.yml  page-2026-06-22T10-05-05-985Z.yml
artifacts_bundle/: matchup-model.pt  test-metrics.json
config/: default.yaml
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_root  .graphify_semantic.json  GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
notebooks/: kaggle_train.ipynb
scripts/: create_seed_index.py  deploy.ps1  package_runpod_bundle.ps1  refresh_card_metadata.py  refresh_card_stats.py  runpod_ceiling.sh  runpod_train.sh  runpod_unseen.sh  segment_diagnostic.py
sql/: 001_ml_extraction_index.sql
src/rigged_matchup_ml/: __init__.py  api_collect.py  benchmark.py  card2vec.py  card_metadata_snapshot.json  card_stats.py  ceiling.py  cli.py  config.py  (+14 more)
tests/: test_api_collect.py  test_benchmark.py  test_calibration.py  test_card2vec.py  test_card_stats.py  test_ceiling.py  test_dataset.py  test_domain.py  test_empirical_prior.py  test_extraction.py  test_metrics.py  test_model.py  test_serve.py  test_unseen_evaluation.py
tools/: bench_threads.py  empirical-prior-helper.ts  repartition_prepared.py
